--- a/KirChatServer/pom.xml
+++ b/KirChatServer/pom.xml
@@ -11,7 +11,7 @@
 
   <name>KirCahtServer Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://localhost:8080</url>
+  <url>http://localhost222:8080</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
