--- a/KirChatServer/pom.xml
+++ b/KirChatServer/pom.xml
@@ -25,8 +25,15 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
       <scope>test</scope>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>4.3.7.RELEASE</version>
     </dependency>
 
     <dependency>
@@ -118,11 +125,6 @@
       <version>1.8.8</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>6.8</version>
-    </dependency>
   </dependencies>
 
   <build>
